--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "outDir": "./transform/",
+    "outDir": "./lib/",
     "sourceMap": false,
     "noImplicitAny": true,
     "module": "commonjs",
