--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "private": true,
   "scripts": {
     "dev": "node build/dev-server.js",
-    "dist": "tsc && node build/build"
+    "dist": "tsc && node build/build",
+    "test":"tsc"
   },
   "dependencies": {
     "mkdirp": "^0.5.1",
