--- a/package.json
+++ b/package.json
@@ -7,14 +7,13 @@
   "scripts": {
     "dev": "node build/dev-server.js",
     "dist": "tsc && node build/build",
-    "test":"tsc"
-  },
-  "dependencies": {
-    "mkdirp": "^0.5.1",
-    "rollup-plugin-stylus-css-modules": "^1.5.0",
-    "style-loader": "^0.19.0"
+    "test": "tsc"
   },
   "devDependencies": {
+    "babel-plugin-transform-remove-console": "^6.8.5",
+    "mkdirp": "^0.5.1",
+    "rollup-plugin-stylus-css-modules": "^1.5.0",
+    "style-loader": "^0.19.0",
     "@types/stylus": "^0.48.27",
     "autoprefixer": "^7.1.2",
     "awesome-typescript-loader": "^3.1.3",
