--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,24 +1,23 @@
 {
-  "compilerOptions": {
-    "outDir": "./lib/",
-    "sourceMap": false,
-    "noImplicitAny": true,
-    "module": "commonjs",
-    "target": "es3",
-    "noEmitOnError": false,
-    "allowSyntheticDefaultImports": true,
-    "allowJs": true,
-    "lib": [
-      "dom",
-      "es5",
-      "es2015.promise"
+    "compilerOptions": {
+        "outDir": "./lib/",
+        "sourceMap": false,
+        "noImplicitAny": true,
+        "module": "ES6",
+        "target": "es3",
+        "noEmitOnError": false,
+        "allowSyntheticDefaultImports": true,
+        "allowJs": true,
+        "lib": [
+            "dom",
+            "es5",
+            "es2015.promise"
+        ]
+    },
+    "include": [
+        "./src/**/*"
+    ],
+    "exclude": [
+        "./test/**/*"
     ]
-  },
-  "include": [
-    "./src/**/*",
-    "./app.ts"
-  ],
-  "exclude": [
-    "./test/**/*"
-  ]
 }
