--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,11 @@
         "target": "es3",
         "noEmitOnError": false,
         "allowSyntheticDefaultImports": true,
+        "noUnusedLocals": true,
+        "noUnusedParameters": true,
+        "pretty": true,
         "allowJs": true,
+        "removeComments": true,
         "lib": [
             "dom",
             "es5",
