--- a/.babelrc
+++ b/.babelrc
@@ -1,27 +1,26 @@
 {
-  "presets": [
-    [
-      "env",
-      {
-        "modules": false
-      }
-    ],
-    "stage-2"
-  ],
-  "plugins": [
-    "transform-runtime",
-    "transform-remove-console"
-  ],
-  "comments": false,
-  "env": {
-    "test": {
-      "presets": [
-        "env",
+    "presets": [
+        [
+            "env",
+            {
+                "modules": false
+            }
+        ],
         "stage-2"
-      ],
-      "plugins": [
-        "istanbul"
-      ]
+    ],
+    "plugins": [
+        "transform-runtime"
+    ],
+    "comments": false,
+    "env": {
+        "test": {
+            "presets": [
+                "env",
+                "stage-2"
+            ],
+            "plugins": [
+                "istanbul"
+            ]
+        }
     }
-  }
 }
