--- a/package.json
+++ b/package.json
@@ -1,88 +1,46 @@
 {
-  "name": "datepicker",
-  "version": "1.0.0",
-  "description": "A Typescript Datepicker",
-  "author": "Fitzzz <wenjingbiao@outlook.com>",
-  "private": true,
-  "scripts": {
-    "dev": "node build/dev-server.js",
-    "dist": "tsc && node build/build",
-    "test": "tsc && node build/test"
-  },
-  "devDependencies": {
-    "babel-plugin-transform-remove-console": "^6.8.5",
-    "mkdirp": "^0.5.1",
-    "rollup-plugin-stylus-css-modules": "^1.5.0",
-    "style-loader": "^0.19.0",
-    "@types/stylus": "^0.48.27",
-    "autoprefixer": "^7.1.2",
-    "awesome-typescript-loader": "^3.1.3",
-    "babel-core": "^6.22.1",
-    "babel-eslint": "^7.2.3",
-    "babel-helper-vue-jsx-merge-props": "^2.0.2",
-    "babel-loader": "^7.1.1",
-    "babel-plugin-istanbul": "^4.1.4",
-    "babel-plugin-syntax-dynamic-import": "^6.18.0",
-    "babel-plugin-syntax-jsx": "^6.18.0",
-    "babel-plugin-transform-runtime": "^6.22.0",
-    "babel-plugin-transform-vue-jsx": "^3.4.3",
-    "babel-preset-env": "^1.3.2",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-es2015-rollup": "^3.0.0",
-    "babel-preset-stage-2": "^6.22.0",
-    "babel-register": "^6.22.0",
-    "buble": "^0.16.0",
-    "chalk": "^2.0.1",
-    "connect-history-api-fallback": "^1.3.0",
-    "copy-webpack-plugin": "^4.0.1",
-    "css-loader": "^0.28.7",
-    "cssnano": "^3.10.0",
-    "eventsource-polyfill": "^0.9.6",
-    "express": "^4.14.1",
-    "extract-text-webpack-plugin": "^2.0.0",
-    "file-loader": "^0.11.1",
-    "friendly-errors-webpack-plugin": "^1.1.3",
-    "html-webpack-plugin": "^2.28.0",
-    "http-proxy-middleware": "^0.17.3",
-    "opn": "^5.1.0",
-    "optimize-css-assets-webpack-plugin": "^2.0.0",
-    "ora": "^1.2.0",
-    "portfinder": "^1.0.13",
-    "rimraf": "^2.6.2",
-    "rollup": "^0.50.0",
-    "rollup-plugin-alias": "^1.3.1",
-    "rollup-plugin-babel": "^3.0.2",
-    "rollup-plugin-buble": "^0.16.0",
-    "rollup-plugin-commonjs": "^8.2.5",
-    "rollup-plugin-flow-no-whitespace": "^1.0.0",
-    "rollup-plugin-node-resolve": "^3.0.0",
-    "rollup-plugin-replace": "^2.0.0",
-    "rollup-plugin-typescript": "^0.8.1",
-    "rollup-plugin-uglify": "^2.0.1",
-    "semver": "^5.3.0",
-    "shelljs": "^0.7.8",
-    "source-map-loader": "^0.2.1",
-    "stylus": "^0.54.5",
-    "stylus-loader": "^3.0.1",
-    "typescript": "^2.3.4",
-    "uglify-js": "^3.1.5",
-    "url-loader": "^0.5.8",
-    "vue-loader": "^13.0.4",
-    "vue-style-loader": "^3.0.1",
-    "vue-template-compiler": "^2.4.2",
-    "webpack": "^2.6.1",
-    "webpack-bundle-analyzer": "^2.2.1",
-    "webpack-dev-middleware": "^1.10.0",
-    "webpack-hot-middleware": "^2.18.0",
-    "webpack-merge": "^4.1.0"
-  },
-  "engines": {
-    "node": ">= 4.0.0",
-    "npm": ">= 3.0.0"
-  },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "not ie <= 8"
-  ]
+    "name": "datepicker",
+    "version": "1.0.0",
+    "description": "A Typescript Datepicker",
+    "author": "Fitzzz <wenjingbiao@outlook.com>",
+    "private": true,
+    "scripts": {
+        "dev": "webpack-dev-server --inline  --config build/development.js",
+        "dist": "tsc && node build/build"
+    },
+    "devDependencies": {
+        "css-loader": "^0.28.7",
+        "style-loader": "^0.19.0",
+        "stylus-loader": "^3.0.1",
+        "awesome-typescript-loader": "^3.1.3",
+        "babel-core": "^6.22.1",
+        "babel-eslint": "^7.2.3",
+        "babel-loader": "^7.1.1",
+        "babel-plugin-istanbul": "^4.1.4",
+        "babel-plugin-syntax-dynamic-import": "^6.18.0",
+        "babel-plugin-transform-runtime": "^6.22.0",
+        "babel-preset-env": "^1.3.2",
+        "babel-preset-es2015": "^6.24.1",
+        "babel-preset-es2015-rollup": "^3.0.0",
+        "babel-preset-stage-2": "^6.22.0",
+        "babel-register": "^6.22.0",
+        "mkdirp": "^0.5.1",
+        "stylus": "^0.54.5",
+        "rollup": "^0.50.0",
+        "rollup-plugin-alias": "^1.3.1",
+        "rollup-plugin-babel": "^3.0.2",
+        "rollup-plugin-buble": "^0.16.0",
+        "rollup-plugin-commonjs": "^8.2.5",
+        "rollup-plugin-flow-no-whitespace": "^1.0.0",
+        "rollup-plugin-node-resolve": "^3.0.0",
+        "rollup-plugin-replace": "^2.0.0",
+        "uglify-js": "^3.1.5",
+        "html-webpack-plugin": "^2.30.1",
+        "webpack": "^3.6.0",
+        "webpack-dev-server": "^2.9.1",
+        "webpack-merge": "^4.1.0"
+    },
+    "dependencies": {
+        "typescript": "^2.3.4"
+    }
 }
