--- a/package.json
+++ b/package.json
@@ -15,14 +15,15 @@
     "babel-plugin-transform-runtime": "^6.22.0",
     "babel-preset-env": "^1.3.2",
     "babel-preset-es2015-rollup": "^3.0.0",
-    "rollup": "^0.50.0",
-    "rollup-plugin-commonjs": "^8.2.5",
-    "rollup-plugin-node-resolve": "^3.0.0",
-    "rollup-plugin-typescript": "^0.8.1",
     "colors": "^1.1.2",
     "css-loader": "^0.28.7",
     "html-webpack-plugin": "^2.30.1",
     "mkdirp": "^0.5.1",
+    "rimraf": "^2.6.2",
+    "rollup": "^0.50.0",
+    "rollup-plugin-commonjs": "^8.2.5",
+    "rollup-plugin-node-resolve": "^3.0.0",
+    "rollup-plugin-typescript": "^0.8.1",
     "style-loader": "^0.19.0",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.1",
