--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "babel-plugin-transform-runtime": "^6.22.0",
     "babel-preset-env": "^1.3.2",
     "babel-preset-es2015-rollup": "^3.0.0",
+    "bootstrap-styl": "^5.0.8",
     "colors": "^1.1.2",
     "css-loader": "^0.28.7",
     "html-webpack-plugin": "^2.30.1",
@@ -33,6 +34,8 @@
     "webpack-merge": "^4.1.0"
   },
   "dependencies": {
-    "typescript": "^2.3.4"
+    "file-loader": "^1.1.6",
+    "typescript": "^2.3.4",
+    "url-loader": "^0.6.2"
   }
 }
