--- a/package.json
+++ b/package.json
@@ -34,8 +34,6 @@
     "webpack-merge": "^4.1.0"
   },
   "dependencies": {
-    "file-loader": "^1.1.6",
-    "typescript": "^2.3.4",
-    "url-loader": "^0.6.2"
+    "typescript": "^2.3.4"
   }
 }
