--- a/package.json
+++ b/package.json
@@ -1,32 +1,33 @@
 {
-  "name": "datepicker",
-  "version": "1.5.8",
-  "description": "A Typescript Datepicker",
-  "author": "Fitzzz <wenjingbiao@outlook.com>",
-  "private": true,
-  "scripts": {
-    "dev": "webpack-dev-server --inline  --config build/dev.js",
-    "dist": "node build/build"
-  },
-  "devDependencies": {
-    "rollup": "^0.50.0",
-    "rollup-plugin-commonjs": "^8.2.5",
-    "rollup-plugin-typescript": "^0.8.1",
-    "awesome-typescript-loader": "^3.1.3",
-    "babel-core": "^6.22.1",
-    "babel-loader": "^7.1.1",
-    "babel-plugin-transform-runtime": "^6.22.0",
-    "babel-preset-env": "^1.3.2",
-    "babel-preset-es2015-rollup": "^3.0.0",
-    "colors": "^1.1.2",
-    "html-webpack-plugin": "^2.30.1",
-    "style-loader": "^0.19.0",
-    "stylus": "^0.54.5",
-    "css-loader": "^0.28.7",
-    "stylus-loader": "^3.0.1",
-    "uglify-js": "^3.1.5",
-    "webpack": "^3.6.0",
-    "webpack-dev-server": "^2.9.1",
-    "typescript": "^2.7.1"
-  }
+    "name": "datepicker",
+    "version": "1.6.0",
+    "description": "A Typescript Datepicker",
+    "author": "Fitzzz <wenjingbiao@outlook.com>",
+    "private": true,
+    "license": "MIT",
+    "scripts": {
+        "dev": "webpack-dev-server --inline  --config build/dev.js",
+        "dist": "node build/build"
+    },
+    "devDependencies": {
+        "rollup": "^0.50.0",
+        "rollup-plugin-commonjs": "^8.2.5",
+        "rollup-plugin-typescript": "^0.8.1",
+        "awesome-typescript-loader": "^3.1.3",
+        "babel-core": "^6.22.1",
+        "babel-loader": "^7.1.1",
+        "babel-plugin-transform-runtime": "^6.22.0",
+        "babel-preset-env": "^1.3.2",
+        "babel-preset-es2015-rollup": "^3.0.0",
+        "colors": "^1.1.2",
+        "html-webpack-plugin": "^2.30.1",
+        "style-loader": "^0.19.0",
+        "stylus": "^0.54.5",
+        "css-loader": "^0.28.7",
+        "stylus-loader": "^3.0.1",
+        "uglify-js": "^3.1.5",
+        "webpack": "^3.6.0",
+        "webpack-dev-server": "^2.9.1",
+        "typescript": "^2.7.1"
+    }
 }
