--- a/package.json
+++ b/package.json
@@ -7,12 +7,12 @@
   "license": "MIT",
   "scripts": {
     "dev": "webpack-dev-server --inline  --config build/dev.js",
-    "dist": "node build/build"
+    "dist": "node build/build",
+    "docs:build": "node build/webpack.config.js --env production",
+    "docs:dev":
+      "webpack-dev-server --inline --config build/webpack.config.js --env development"
   },
   "devDependencies": {
-    "rollup": "^0.50.0",
-    "rollup-plugin-commonjs": "^8.2.5",
-    "rollup-plugin-typescript": "^0.8.1",
     "awesome-typescript-loader": "^3.1.3",
     "babel-core": "^6.22.1",
     "babel-loader": "^7.1.1",
@@ -20,14 +20,18 @@
     "babel-preset-env": "^1.3.2",
     "babel-preset-es2015-rollup": "^3.0.0",
     "colors": "^1.1.2",
+    "css-loader": "^0.28.7",
     "html-webpack-plugin": "^2.30.1",
+    "process-argv": "^1.0.0",
+    "rollup": "^0.50.0",
+    "rollup-plugin-commonjs": "^8.2.5",
+    "rollup-plugin-typescript": "^0.8.1",
     "style-loader": "^0.19.0",
     "stylus": "^0.54.5",
-    "css-loader": "^0.28.7",
     "stylus-loader": "^3.0.1",
+    "typescript": "^2.7.1",
     "uglify-js": "^3.1.5",
     "webpack": "^3.6.0",
-    "webpack-dev-server": "^2.9.1",
-    "typescript": "^2.7.1"
+    "webpack-dev-server": "^2.9.1"
   }
 }
