--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "datepicker",
-  "version": "2.0.0",
+  "version": "2.0.2",
   "description": "A Typescript Datepicker",
   "author": "Fitzzz <wenjingbiao@outlook.com>",
   "private": true,
@@ -23,7 +23,7 @@
     "name": "TypePicker"
   },
   "devDependencies": {
-    "awesome-typescript-loader": "^3.1.3",
+    "awesome-typescript-loader": "^5.2.1",
     "babel-core": "^6.22.1",
     "babel-loader": "^7.1.1",
     "babel-plugin-transform-runtime": "^6.22.0",
@@ -31,8 +31,10 @@
     "babel-preset-es2015-rollup": "^3.0.0",
     "colors": "^1.1.2",
     "css-loader": "^0.28.7",
+    "ejs-loader": "^0.3.1",
     "fs-extra": "^7.0.0",
-    "html-webpack-plugin": "^2.30.1",
+    "html-loader": "^0.5.5",
+    "html-webpack-plugin": "^4.0.0-alpha.2",
     "process-argv": "^1.0.0",
     "rollup": "^0.50.0",
     "rollup-plugin-commonjs": "^8.2.5",
@@ -42,11 +44,8 @@
     "stylus-loader": "^3.0.1",
     "typescript": "^2.7.1",
     "uglify-js": "^3.1.5",
-    "webpack": "^3.6.0",
+    "webpack": "^4.19.0",
+    "webpack-cli": "^3.1.0",
     "webpack-dev-server": "^2.9.1"
-  },
-  "dependencies": {
-    "ejs-loader": "^0.3.1",
-    "html-loader": "^0.5.5"
   }
 }
