--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "datepicker",
-  "version": "5.1.0",
+  "version": "5.3.0",
   "description": "A Typescript Datepicker",
   "author": "Fitzzz <wenjingbiao@outlook.com>",
   "private": true,
@@ -16,7 +16,7 @@
     },
     "bundle": {
       "es": "typepicker.esm.js",
-      "umd": "typepicker.min.js"
+      "umd": "typepicker.js"
     },
     "css": "style.css",
     "dist": "./dist",
