--- a/package.json
+++ b/package.json
@@ -1,51 +1,36 @@
 {
   "name": "datepicker",
-  "version": "5.5.0",
+  "version": "5.8.0",
   "description": "A Typescript Datepicker",
-  "author": "Fitzzz <wenjingbiao@outlook.com>",
+  "author": "Fi2zzz <wenjingbiao@outlook.com>",
+  "repository": {
+    "type": "github",
+    "url": "https://github.com/Fi2zz/datepicker"
+  },
   "private": true,
   "license": "MIT",
   "scripts": {
-    "start": "node scripts/webpack.js",
-    "build": "node scripts/rollup.js"
-  },
-  "build": {
-    "entry": {
-      "ts": "./src/index.ts",
-      "style": "./src/style.styl"
-    },
-    "bundle": {
-      "es": "typepicker.esm.js",
-      "umd": "typepicker.js"
-    },
-    "css": "style.css",
-    "dist": "./dist",
-    "name": "TypePicker"
+    "start": "webpack --mode development  -w --display errors-only --display-error-details",
+    "build": "webpack --mode production --disokat errors-ony --display-error-details"
   },
   "devDependencies": {
-    "awesome-typescript-loader": "^5.2.1",
-    "babel-core": "^6.22.1",
-    "babel-loader": "^7.1.1",
-    "babel-plugin-transform-runtime": "^6.22.0",
-    "babel-preset-env": "^1.3.2",
-    "babel-preset-es2015-rollup": "^3.0.0",
-    "colors": "^1.1.2",
     "css-loader": "^0.28.7",
-    "ejs-loader": "^0.3.1",
     "fs-extra": "^7.0.0",
-    "html-loader": "^0.5.5",
-    "html-webpack-plugin": "^4.0.0-alpha.2",
     "process-argv": "^1.0.0",
-    "rollup": "^0.50.0",
-    "rollup-plugin-commonjs": "^8.2.5",
-    "rollup-plugin-typescript": "^0.8.1",
     "style-loader": "^0.19.0",
-    "stylus": "^0.54.5",
     "stylus-loader": "^3.0.1",
-    "typescript": "^2.7.1",
-    "uglify-js": "^3.1.5",
+    "typescript": "^3.5.2",
     "webpack": "^4.19.0",
-    "webpack-cli": "^3.1.0",
-    "webpack-dev-server": "^2.9.1"
+    "webpack-cli": "^3.1.0"
+  },
+  "dependencies": {
+    "@babel/core": "^7.4.5",
+    "@babel/preset-env": "^7.4.5",
+    "babel-loader": "^8.0.6",
+    "fork-ts-checker-webpack-plugin": "^1.3.7",
+    "mini-css-extract-plugin": "^0.7.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.1",
+    "terser-webpack-plugin": "^1.3.0",
+    "ts-loader": "^6.0.4"
   }
 }
