--- a/package.json
+++ b/package.json
@@ -16,14 +16,10 @@
   "devDependencies": {
     "css-loader": "^0.28.7",
     "fs-extra": "^7.0.0",
-    "process-argv": "^1.0.0",
     "style-loader": "^0.19.0",
-    "stylus-loader": "^3.0.1",
     "typescript": "^3.5.2",
     "webpack": "^4.19.0",
-    "webpack-cli": "^3.1.0"
-  },
-  "dependencies": {
+    "webpack-cli": "^3.1.0",
     "@babel/core": "^7.4.5",
     "@babel/preset-env": "^7.4.5",
     "babel-loader": "^8.0.6",
