--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "datepicker",
-  "version": "5.8.0",
+  "version": "5.8.4",
   "description": "A Typescript Datepicker",
   "author": "Fi2zzz <wenjingbiao@outlook.com>",
   "repository": {
@@ -11,22 +11,29 @@
   "license": "MIT",
   "scripts": {
     "start": "webpack --mode development  -w --display errors-only --display-error-details",
-    "build": "webpack --mode production --disokat errors-ony --display-error-details"
+    "build": "webpack --mode production --disokat errors-ony --display-error-details",
+    "build:esm": "webpack --mode production --disokat errors-ony --display-error-details --module",
+    "gulp": "gulp package build build:esm"
   },
   "devDependencies": {
-    "css-loader": "^0.28.7",
-    "fs-extra": "^7.0.0",
-    "style-loader": "^0.19.0",
-    "typescript": "^3.5.2",
-    "webpack": "^4.19.0",
-    "webpack-cli": "^3.1.0",
     "@babel/core": "^7.4.5",
     "@babel/preset-env": "^7.4.5",
     "babel-loader": "^8.0.6",
+    "css-loader": "^0.28.7",
     "fork-ts-checker-webpack-plugin": "^1.3.7",
+    "fs-extra": "^7.0.0",
     "mini-css-extract-plugin": "^0.7.0",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
+    "style-loader": "^0.19.0",
     "terser-webpack-plugin": "^1.3.0",
-    "ts-loader": "^6.0.4"
+    "ts-loader": "^6.0.4",
+    "typescript": "^3.5.2",
+    "webpack": "^4.19.0",
+    "webpack-cli": "^3.1.0"
+  },
+  "dependencies": {
+    "gulp": "^4.0.2",
+    "through2": "^3.0.1",
+    "webpack-stream": "^5.2.1"
   }
 }
