--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "datepicker",
-  "version": "5.8.9",
+  "version": "5.9.0",
   "description": "A Typescript Datepicker",
   "author": "Fi2zzz <wenjingbiao@outlook.com>",
   "repository": {
@@ -27,9 +27,7 @@
     "ts-loader": "^6.0.4",
     "typescript": "^3.5.2",
     "webpack": "^4.19.0",
-    "webpack-cli": "^3.1.0"
-  },
-  "dependencies": {
+    "webpack-cli": "^3.1.0",
     "gulp": "^4.0.2",
     "through2": "^3.0.1",
     "webpack-stream": "^5.2.1"
