--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "datepicker",
-  "version": "5.9.5",
+  "version": "5.9.6",
   "description": "A Typescript Datepicker",
   "author": "Fi2zzz <wenjingbiao@outlook.com>",
   "repository": {
@@ -11,7 +11,7 @@
   "license": "MIT",
   "scripts": {
     "start": "webpack --mode development  -w --display errors-only --display-error-details",
-    "build": "gulp package build build:esm"
+    "build": "gulp build:clean build:version build:umd build:esm"
   },
   "devDependencies": {
     "@babel/core": "^7.4.5",
@@ -19,7 +19,6 @@
     "babel-loader": "^8.0.6",
     "css-loader": "^0.28.7",
     "fork-ts-checker-webpack-plugin": "^1.3.7",
-    "fs-extra": "^7.0.0",
     "mini-css-extract-plugin": "^0.7.0",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "style-loader": "^0.19.0",
@@ -31,5 +30,6 @@
     "gulp": "^4.0.2",
     "through2": "^3.0.1",
     "webpack-stream": "^5.2.1"
-  }
+  },
+  "dependencies": {}
 }
