--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "datepicker",
-  "version": "6.0.9",
+  "version": "6.1.0",
   "description": "A Typescript Datepicker",
   "author": "Fi2zzz <wenjingbiao@outlook.com>",
   "repository": {
@@ -10,7 +10,7 @@
   "private": true,
   "license": "MIT",
   "scripts": {
-    "start": "webpack --mode development  -w --display errors-only --display-error-details",
+    "start": "webpack --mode development  -w ",
     "build": "gulp build:clean build:version build:umd build:esm"
   },
   "devDependencies": {
