--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "datepicker",
-  "version": "6.1.1",
+  "version": "6.1.4",
   "description": "A Typescript Datepicker",
   "author": "Fi2zzz <wenjingbiao@outlook.com>",
   "repository": {
@@ -19,16 +19,22 @@
     "babel-loader": "^8.0.6",
     "css-loader": "^0.28.7",
     "fork-ts-checker-webpack-plugin": "^1.3.7",
+    "gulp": "^4.0.2",
     "mini-css-extract-plugin": "^0.7.0",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "style-loader": "^0.19.0",
     "terser-webpack-plugin": "^1.3.0",
+    "through2": "^3.0.1",
     "ts-loader": "^6.0.4",
     "typescript": "^3.5.2",
     "webpack": "^4.19.0",
     "webpack-cli": "^3.1.0",
-    "gulp": "^4.0.2",
-    "through2": "^3.0.1",
     "webpack-stream": "^5.2.1"
+  },
+  "dependencies": {
+    "babel-plugin-macros": "^2.6.1",
+    "defines-loader": "^1.0.2",
+    "source-map-loader": "^0.2.4",
+    "typescript-transform-macros": "^1.1.1"
   }
 }
