--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "datepicker",
-  "version": "6.1.9",
-  "description": "A Typescript Datepicker",
+  "name": "typepicker",
+  "version": "6.1.2",
+  "description": "A date picker use in web and react-native and nodejs",
   "author": "Fi2zzz <wenjingbiao@outlook.com>",
   "repository": {
     "type": "github",
@@ -10,31 +10,39 @@
   "private": true,
   "license": "MIT",
   "scripts": {
-    "start": "webpack --mode development  -w ",
-    "build": "gulp build:clean build:version build:umd build:esm build:core build:core:esm"
+    "start": "webpack --mode development  -w "
   },
   "devDependencies": {
     "@babel/core": "^7.4.5",
-    "@babel/preset-env": "^7.4.5",
+    "@babel/preset-env": "^7.5.5",
+    "@babel/preset-typescript": "^7.3.3",
+    "@babel/types": "^7.5.5",
+    "babel-jest": "^24.8.0",
     "babel-loader": "^8.0.6",
-    "css-loader": "^0.28.7",
+    "defines-loader": "^1.0.2",
     "fork-ts-checker-webpack-plugin": "^1.3.7",
     "gulp": "^4.0.2",
-    "mini-css-extract-plugin": "^0.7.0",
-    "optimize-css-assets-webpack-plugin": "^5.0.1",
-    "style-loader": "^0.19.0",
-    "terser-webpack-plugin": "^1.3.0",
+    "jest": "^24.8.0",
+    "source-map-loader": "^0.2.4",
     "through2": "^3.0.1",
+    "ts-jest": "^24.0.2",
     "ts-loader": "^6.0.4",
     "typescript": "^3.5.2",
     "webpack": "^4.19.0",
     "webpack-cli": "^3.1.0",
     "webpack-stream": "^5.2.1"
   },
-  "dependencies": {
-    "babel-plugin-macros": "^2.6.1",
-    "defines-loader": "^1.0.2",
-    "source-map-loader": "^0.2.4",
-    "typescript-transform-macros": "^1.1.1"
+  "babel": {
+    "presets": [
+      [
+        "@babel/preset-env",
+        {
+          "targets": {
+            "node": "current"
+          }
+        }
+      ],
+      "@babel/preset-typescript"
+    ]
   }
 }
