--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "typepicker",
-  "version": "6.1.2",
+  "bannerName": "TypePicker",
+  "version": "6.1.3",
   "description": "A date picker use in web and react-native and nodejs",
   "author": "Fi2zzz <wenjingbiao@outlook.com>",
   "repository": {
